# afk

./: .env.example  .gitignore  ARCH.md  CLAUDE.md  LICENSE  PROJECT.md  README.md  install.sh  project.md  pyproject.toml
afk/: config.py  main.py
afk/adapters/claude_code/: agent.py  commit_helper.py
afk/adapters/codex/: agent.py
afk/adapters/deep_research/: agent.py
afk/adapters/experimental/codex/: agent.py
afk/adapters/experimental/deep_research/: agent.py
afk/adapters/telegram/: adapter.py  config.py  renderer.py
afk/adapters/web/: index.html  server.py
afk/adapters/whisper/: config.py  stt.py
afk/capabilities/tunnel/: __init__.py  base.py  cloudflared.py  config.py  expo.py  multi_service.py  redirect.py  tunnel.py
afk/core/: claude_process.py  commands.py  config.py  events.py  git_worktree.py  orchestrator.py  session_log.py  session_manager.py  subprocess_tracker.py  tunnel.py
afk/dashboard/: index.html  server.py
afk/messenger/: port.py
afk/messenger/telegram/: adapter.py
afk/ports/: agent.py  control_plane.py  stt.py
afk/storage/: message_store.py  project_store.py  template_store.py
afk/templates/nextjs/: CLAUDE.md  template.json
afk/templates/react-native/: CLAUDE.md  template.json
afk/voice/: port.py  whisper_api.py
afk/web/: index.html  server.py
tests/: conftest.py  test_codex_mapping.py  test_commands.py  test_deep_research.py  test_events.py  test_expo_tunnel.py  test_message_store.py  test_project_store.py  test_session_manager.py  test_telegram_helpers.py  test_template_store.py  test_tunnel_detection.py
(+7 files in other folders)
