[project]
name = "afk"
version = "0.1.0"
description = "Remote control plane for Claude Code via Telegram"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[ext]>=21.0",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "openai>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
afk = "afk.main:run"
