[project]
name = "afk"
version = "0.1.0"
description = "Remote control plane for Claude Code via Telegram"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[ext]>=21.0",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "segno>=1.6",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
afk = "afk.main:run"
